--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   url_launcher: ^6.1.7
   http: ^0.13.5
   flutter_email_sender: ^5.2.0
+  email_validator: ^2.1.17
+  day_night_switcher: ^0.2.0+1
 
 
 dev_dependencies:
@@ -70,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
