--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_email_sender: ^5.2.0
   email_validator: ^2.1.17
   sqflite: ^2.2.4+1
+  path_provider: ^2.0.12
+  image_picker: ^0.8.6+4
+  flutter_launcher_icons: ^0.12.0
 
 
 
@@ -59,6 +62,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/DesktopIcon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -97,7 +105,7 @@ flutter:
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/TrajanPro_Bold.tmtf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
